OCA Java SE8 Notes/Twist in the Tale.txt
Twist in the Tale

Twist in the Tale 1.1 - Answer: c, d
Twist in the Tale 1.2 - Answer: a, c, d
Twist in the Tale 1.3 - Answer: a, b
Twist in the Tale 1.4 - Answer: The code submitted by Harry


Twist in the Tale 2.1 - (part 1) Answer: 534 534
Twist in the Tale 2.1 - (part 2) Answer: Only var1, var6, and var7 correctly define a literal integer value.
Twist in the Tale 2.2 - Answer: a, b, c, e
Twist in the Tale 2.3 - Answer: 32
Twist in the Tale 2.4 - Answer: The operands that will execute are circled and the ones that won’t are enclosed in rectangles in figure A.2.


Twist in the Tale 3.1 - Answer: a
Twist in the Tale 3.2 - Answer: The code fails to compile, with the following compilation error message:
						Employee.java:4: error: recursive constructor invocation 	
						Employee() {
						^
						1 error
Twist in the Tale 3.3 - Answer: e


Twist in the Tale 4.1 - Answer: e
Twist in the Tale 4.2 - Answer: d
Twist in the Tale 4.3 - Answer: b, d
Twist in the Tale 4.4 - Answer: a

Twist in the Tale 5.1 - Answer: f
Twist in the Tale 5.2 - Answer: c
Twist in the Tale 5.3 - Answer: The submission by Harry.
Twist in the Tale 5.4 - Answer: a
 
